# cc-switch-web

./: .gitignore  CHANGELOG.md  README.md  README_JA.md  README_ZH.md  WEB_MODE.md  build-web-release.sh  components.json  package-lock.json  package.json  pnpm-lock.yaml  start-web.sh  stop-web.sh  tailwind.config.cjs  tsconfig.node.json  vite.config.ts  vitest.config.ts
.agentdocs/: index.md
.agentdocs/frontend/: web-fork-architecture.md
.agentdocs/workflow/: 260417-merge-upstream-cc-switch.md  260418-release-pipeline-unification.md  260418-upstream-sync-execution-plan.md  260418-upstream-sync-strategy.md  260419-merge-upstream-refresh.md  260501-merge-upstream-v3141.md  260517-merge-upstream-v3150.md  260602-merge-upstream-v3161.md
.github/workflows/: build-web-release.yml  ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: import_config_from_sql.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/api/: dispatch.rs  invoke.rs  ws.rs
crates/server/src/rpc/: mod.rs  response.rs
crates/server/tests/: rustls_provider_init.rs  sql_export_download.rs  sql_import_upload.rs
docs-dev/: UPSTREAM_SYNC.md  WEB_DELTA.md  upstream-sync-v3.14.1.md
docs/release-notes/: v3.15.0-en.md  v3.15.0-ja.md  v3.15.0-zh.md
docs/user-manual/: README.md
flatpak/: README.md
scripts/: build-web-deb-package.sh  generate-icon-index.js
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  (+15 more)
tests/: test-web-deb-package.sh  test-web-deb-root-service.sh
(+339 files in other folders)
