[package]
name = "cc-switch-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# 复用现有 Tauri crate 中的业务逻辑与类型
cc_switch = { path = "../../src-tauri", package = "cc-switch" }
indexmap = { version = "2", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
